--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
 							</ul>
 						</div>
 					</section>
+				</section>	
 					
 				<section data-transition="slide" data-background="#00019" data-background-transition="zoom">
 					<small> criado a partir de <a href = 'https://revealjs.com/#/'>reveal.js</a></small>
