--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>CCLHM0057 - História da América: Colonização e Resitência</title>
+		<title>CCLHM0057 - História da América: Colonização e Resistência</title>
 
 		<meta name="description" content="Curso de História da América: Colonização e Resistência. 2020.1/Unilab-BA">
 		<meta name="author" content="Eric Brasil">
