atualização index.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 					<section>
 						<small><a href="#/10">Geografia do Continente</a></small>
-						<img src="https://www.guiageo-mapas.com/imagens/mapa-mundi.jpg" style="background:none; border:none; box-shadow:none;">
+						<img src="imagens/mundi.png" style="background:none; border:none; box-shadow:none;">
 					</section>
 
 					<section data-background-iframe="https://thetruesize.com/#?borders=1~!MTQwODI5MzI.NDUwMTQ3Ng*Mjc1OTY2NTA(Mzg0ODYwMw" data-background-interactive>
@@ -120,12 +120,12 @@
 					</section>
 
 					<section>
-						<img src="http://expositions.bnf.fr/marine/images/3/por_329.jpg" style="background: none; border: none; box-shadow: none">
+						<img src="imagens/por_329.jpg" style="background: none; border: none; box-shadow: none">
 						<small><a href="http://expositions.bnf.fr/marine/grand/por_329.htm">Peuple cannibale nu (Amérindiens), 1592, Théodore de Bry</a></small>
 					</section>
 
 					<section>
-						<img src="http://expositions.bnf.fr/marine/images/3/por_328.jpg" style="background: none; border: none; box-shadow: none">
+						<img src="imagens/por_328" style="background: none; border: none; box-shadow: none">
 						<small><a href="http://expositions.bnf.fr/marine/grand/por_328.htm">Colomb reçoit des présents des indigènes tandis que ses compagnons dressent une croix de bois, 1592, Théodore de Bry</a></small>
 					</section>
 				</section>
@@ -195,7 +195,7 @@
 				<section>
 					<h2>Sociedades Autóctones das Américas</h2>
 					<h4>(Antes do séc. XV)</h4>					
-					<small>19/03/2020</small>
+					<small>Aula Síncrona 2 - 21/01/2021</small>
 				</section>
 
 				<section>
@@ -443,7 +443,7 @@
 
 					<section>
 						<p><a href="http://libtips.org/main/3F80CE0E9E03642CC86FFBDAB9A9A5AE">"La organizacion economica del estado Inca"</a>, primeira edição de 1977 (a partir de tese defendida na Universidade de Chicago em 1955.</p>
-						<img src="http://libtips.org/covers/1455000/3f80ce0e9e03642cc86ffbdab9a9a5ae-d.jpg" style="background: none; border: none; box-shadow: none;"  width="30%">
+						<img src="imagens/capa_murra.jpg" style="background: none; border: none; box-shadow: none;"  width="30%">
 					</section>
 
 					<section>
