--- a/index.html
+++ b/index.html
@@ -576,7 +576,13 @@
 						<p>Às vésperas na chegada dos espanhóis, mexicas e incas controlavam centenas de comunidades, cobrando <strong>tributos</strong>, seja em forma de produtos (Mexicas) ou em forma de trabalho (a mita entre os Incas), e mantendo <strong>controle político e militar rígidos</strong>. O que geraria insatisfação e traria consequências profundas para o futuro desses Estados.</p>
 					</section>
 				</section>
-
+				<section>
+					<h2>As várias visões da "conquista" (XVI)</h2>
+					<small>Aula Síncrona 3 - 28/01/2021</small>
+				</section>
+				<section>
+					<iframe src="https://prezi.com/embed/tdwnm42ihili/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="608" width="1080"></iframe>
+				</section>
 				<section data-transition="slide" data-background="#00019" data-background-transition="zoom">
 					<small> criado a partir de <a href = 'https://revealjs.com/#/'>reveal.js</a></small>
 				</section>
