--- a/index.html
+++ b/index.html
@@ -580,15 +580,21 @@
 					<h2>As várias visões da "conquista" (XVI)</h2>
 					<small>Aula Síncrona 3 - 28/01/2021</small>
 				</section>
-				<section>
-					<iframe src="https://prezi.com/embed/tdwnm42ihili/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="608" width="1080"></iframe>
-				</section>
 				<section data-transition="slide" data-background="#00019" data-background-transition="zoom">
 					<small> criado a partir de <a href = 'https://revealjs.com/#/'>reveal.js</a></small>
 				</section>
+				<section>
+					<h2>Resistências, negociação, agência: história e historiografia (XVI-XVII)</h2>
+					<small>Aula Síncrona 4 - 18/02/2021</small>
+				</section>
+				<section>
+					<iframe src="https://prezi.com/embed/_rkx7uru_pqr/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="608" width="1080"></iframe>
+				</section>
+				<section data-transition="slide" data-background="#00019" data-background-transition="zoom">
+					<small> criado a partir de <a href = 'https://revealjs.com/#/'>reveal.js</a></small>
+				</section>				
 			</div>
 		</div>
-
 		<script src="js/reveal.js"></script>
 
 		<script>
