atualização do index md 4 e 5

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 					<p>Colonização e Resitência - 2020.1</p>					
 					<small>Prof. <a href="https://ericbrasiln.github.io/">Eric Brasil</a></small>
 				</section>
-
+				<section>
+					<h2 style="text-align: right;">Módulo 1:<br>América, Américas e o ensino de história</h2>
+				</section>
 				<section>
 					<h2>AMÉRICA, AMÉRICAS</h2>
 					<h4>Apresentação e reflexões sobre a disciplina</h4>
@@ -190,6 +192,10 @@
 					<section>
 						<h3>Afinal, o que é colonizar?</h3>
 					</section>
+				</section>
+
+				<section>
+					<h2 style="text-align: right;">Módulo 2:<br>Sociedades Autóctones das Américas<br>(Antes do século XV)</h2>
 				</section>
 
 				<section>
@@ -577,15 +583,88 @@
 					</section>
 				</section>
 				<section>
-					<h2>As várias visões da "conquista" (XVI)</h2>
-					<small>Aula Síncrona 3 - 28/01/2021</small>
+					<h2 style="text-align: right;">Módulo 3:<br>Conquistas e Resistências<br>(XVI-XVII)</h2>
 				</section>
 				<section>
-					<h2>Resistências, negociação, agência: história e historiografia (XVI-XVII)</h2>
-					<small>Aula Síncrona 4 - 18/02/2021</small>
+					<section>
+						<h3>As várias visões da "conquista" (XVI)</h3>
+						<small>Aula Síncrona 3 - 28/01/2021</small>
+					</section>
+					<section>
+						<iframe src="https://prezi.com/embed/tdwnm42ihili/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="608" width="1080"></iframe>
+					</section>
 				</section>
 				<section>
-					<iframe src="https://prezi.com/embed/_rkx7uru_pqr/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="608" width="1080"></iframe>
+					<section>
+						<h3>Resistências, negociação, agência: história e historiografia (XVI-XVII)</h3>
+						<small>Aula Síncrona 4 - 18/02/2021</small>
+					</section>
+					<section>
+						<iframe src="https://prezi.com/embed/_rkx7uru_pqr/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="608" width="1080"></iframe>
+					</section>
+				</section>
+				<section>
+					<h2 style="text-align: right;">Módulo 4:<br>Formação da sociedade colonial espanhola<br>(XVI-XVIII)</h2>
+				</section>
+				<section>
+					<section>
+						<h3>Formação da sociedade colonial espanhola (XVI-XVIII)</h3>
+						<small>Aula Síncrona 5 - 25/02/2021</small>
+					</section>
+					<section>
+						<small>Sistemas administrativos, políticos e econômicos</small>
+						<iframe src="https://prezi.com/embed/hs9xrgv32k9j/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="608" width="1080"></iframe>
+					</section>
+					<section>
+						<small>Trabalho e tributo na sociedade colonial: impactos na ordem social das sociedades autóctones</small>
+						<iframe src="https://prezi.com/embed/_rkx7uru_pqr/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="608" width="1080"></iframe>
+					</section>
+				</section>
+				<section>
+					<h3>Bonus!</h3>
+					<iframe src="https://open.spotify.com/embed-podcast/episode/4zYuvt83LXoS03Rhd8FYG6" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+				</section>
+				<section>
+					<h2 style="text-align: right;">Módulo 5:<br>Escravidão africana nas Américas<br>(XVI-XVIII)</h2>
+				</section>
+				<section>
+					<section>
+						<h3>A escravidão no “Novo Mundo”: raça, capitalismo e trabalho</h3>
+						<small>Aula Síncrona 6 - 11/03/2021</small>
+					</section>
+					<section>
+						<small>Debate sobre o termo "escravo".</small>
+						<iframe src="https://prezi.com/embed/sxmzog2vcfjy/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="608" width="1080"></iframe>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h3>México, Peru e Região Platina</h3>
+						<small>Aula Síncrona 7 - 18/03/2021</small>
+					</section>
+					<section>
+						<small>Existiu escravidão africana nessas regiões?</small>
+						<iframe src="https://prezi.com/embed/4b3avjqnxivx/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="608" width="1080"></iframe>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h3>As 13 Colônias do Norte e o Caribe</h3>
+						<small>Aula Síncrona 8 - 01/04/2021</small>
+					</section>
+					<section>
+						<small>Escravidão e colonização inglesa no Caribe e no continente</small>
+						<iframe src="https://prezi.com/embed/aev3aslazjlj/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="608" width="1080"></iframe>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h3>Lutas contra o cativeiro, lutas pela liberdade</h3>
+						<small>Aula Síncrona 9 - 18/04/2021</small>
+					</section>
+					<section>
+						<iframe src="https://prezi.com/embed/kizkmdimpyk7/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="608" width="1080"></iframe>
+					</section>
 				</section>
 				<section data-transition="slide" data-background="#00019" data-background-transition="zoom">
 					<small> criado a partir de <a href = 'https://revealjs.com/#/'>reveal.js</a></small>
